# CybaOp

./: .env.example  .gitignore  eslint.config.mjs  middleware.ts  package-lock.json  package.json
.kiro/settings/: mcp.json
.kiro/specs/cybaop-production-ready/: prompt-analytics-pipeline.md  prompt-aws-migration.md  (+9 more)
.kiro/steering/: agent-builder.md  coding-standards.md  deployment.md  project.md
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx  types.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/docs/: aws-architecture.md
backend/src/agent/: graph.py  state.py
backend/src/agent/edges/: routing.py
backend/src/agent/nodes/: calculate_metrics.py  detect_trends.py  fetch_profile.py  fetch_tracks.py  format_report.py  generate_insights.py
backend/src/api/: app.py  auth.py
backend/src/api/middleware/: error_handler.py  rate_limiter.py
backend/src/api/routes/: analytics.py  auth.py  billing.py  health.py  triage.py  workflows.py
backend/src/db/: queries.py  schema.py  session.py
backend/src/shared/: config.py  errors.py  logging.py  models.py
backend/src/tools/: builtin.py  engagement.py  registry.py  soundcloud.py  trends.py  triage.py
backend/src/workflow/: engine.py  health.py  registry.py
backend/src/workflow/steps/: __init__.py  critique.py  planner.py  remediation.py
backend/tests/: conftest.py
backend/tests/unit/: test_engagement.py  test_errors.py  test_health_score.py  test_models.py  test_routing.py  test_trends.py  test_triage.py
lib/: fetch.ts
(+56 files in other folders)
